--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+/*
+ * サブプロジェクト Volley 用のビルドスクリプト
+ */
+project(':modules:volley') {
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:0.12.+'
+        }
+    }
+}
+
 buildscript {
     repositories {
         jcenter()
