--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name="android.kota.com.dribbbleviewer.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/dv_ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
